tests/invalid/dict_missing_key_eq/main.py
def main() -> None:
    d: dict[int, int] = {}
    d["k"] = 7


if __name__ == "__main__":
    main()
